site: move js libs to libman

--- a/site/Presentation/Views/Shared/Partial/Js.cshtml
+++ b/site/Presentation/Views/Shared/Partial/Js.cshtml
@@ -1,13 +1,13 @@
 ﻿@using Structure.Helpers
 
-<script src="@Url.Content("~/Assets/js/lib/jquery-1.6.1.min.js")?v=@Config.Version" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/jquery.validate.min.js")?v=@Config.Version" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/jquery.validate.unobtrusive.min.js")?v=@Config.Version" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/jquery.unobtrusive-ajax.min.js")?v=@Config.Version" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/jquery/jquery.min.js")?v=@Config.Version" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/jquery/jquery.validate.min.js")?v=@Config.Version" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/jquery/jquery.validate.unobtrusive.min.js")?v=@Config.Version" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/jquery/jquery.unobtrusive-ajax.min.js")?v=@Config.Version" type="text/javascript"></script>
 
-<script src="@Url.Content("~/Assets/js/lib/StringExtension.js")?v=@Config.Version" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/NumericValue.js")?v=@Config.Version" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/Scale.js")?v=@Config.Version" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/StringExtension.js")?v=@Config.Version" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/NumericValue.js")?v=@Config.Version" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/Scale.js")?v=@Config.Version" type="text/javascript"></script>
 
 <script src="@Url.Content("~/Assets/js/Legend.js")?v=@Config.Version" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/Menu.js")?v=@Config.Version" type="text/javascript"></script>
