--- a/site/Presentation/Views/Shared/_Layout.cshtml
+++ b/site/Presentation/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 	<meta property="og:image:type" content="image/png">
 	<meta property="og:image:width" content="600">
 	<meta property="og:image:height" content="600">
-	<meta property="og:url" content="@(url + Context.Request.GetDisplayUrl())">
+	<meta property="og:url" content="@(url)">
 	<meta property="og:type" content="website">
 
 </head>
