site: fix meta encoding

--- a/site/Presentation/Views/Shared/_Layout.cshtml
+++ b/site/Presentation/Views/Shared/_Layout.cshtml
@@ -19,6 +19,8 @@
 
 	@await Html.PartialAsync("Partial/Js")
 
+	<meta charset="utf-8">
+
 	<meta property="og:title" content="@ViewBag.Title">
 	<meta property="og:description" content="Esta é a história de um amontoado de átomos ao acaso tentando voltar a ser.">
 	<meta property="og:image" content="@url/Assets/images/facebook.png">
